k8s/spec.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: production

---
apiVersion: v1
kind: Service
metadata:
  name: rdicidr-service
  namespace: production
spec:
  selector:
    app: rdicidr
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
    name: http
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rdicidr-ingress
  namespace: production
spec:
  ingressClassName: traefik
  rules:
  - host: "challenge.me"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rdicidr-service
            port:
              number: 8080

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rdicidr-statefulset
  namespace: production
spec:
  selector:
    matchLabels:
      app: rdicidr
  serviceName: rdicidr-service
  replicas: 3
  template:
    metadata:
      labels:
        app: rdicidr
    spec:
      imagePullSecrets:
      - name: ecr-credentials
      terminationGracePeriodSeconds: 10
      containers:
      - name: app
        image: <account-id>.dkr.ecr.<region>.amazonaws.com/<namespace>/<ecr-repository>:<image-tag>
        ports:
        - containerPort: 80
          protocol: TCP
          name: http
